# typstify

./: .dockerignore  .gitignore  .rumdl.toml  .taplo.toml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  UPGRADE-REPORT.md  action.yml  config.toml  entrypoint.sh  index.html  package.json  robots.txt  rss.xml  search-index.json  sitemap-style.xsl  sitemap.xml  tailwind.config.js  verify_theme.spec.ts
.github/: copilot-instructions.md
.github/prompts/: ui-ux-pro-max.prompt.md
.github/workflows/: ci.yml  deploy-pages.yml  deploy-worker.yml
.shared/ui-ux-pro-max/data/stacks/: leptos.csv
.shared/ui-ux-pro-max/scripts/: core.py  search.py
about/: index.html
app/: Cargo.toml
app/src/: lib.rs
archives/: index.html
assets/: main.js  style.css
contents/: getting-started.typ  javascript-modern.md  rust-guide.md
contents/getting-started/: installation.typ  quick-start.typ
crates/typstify-core/: Cargo.toml
crates/typstify-core/src/: config.rs  content.rs  error.rs  frontmatter.rs  lib.rs
crates/typstify-generator/: Cargo.toml
crates/typstify-generator/src/: assets.rs  build.rs  collector.rs  html.rs  lib.rs  robots.rs  rss.rs  sitemap.rs  static_assets.rs  template.rs
crates/typstify-generator/tests/: e2e.rs
crates/typstify-parser/: Cargo.toml
crates/typstify-parser/src/: lib.rs  markdown.rs  syntax.rs  typst_parser.rs
crates/typstify-search/: Cargo.toml
crates/typstify-search-wasm/: Cargo.toml  package.json
crates/typstify-search-wasm/src/: directory.rs  lib.rs  query.rs  simple.rs
crates/typstify-search/src/: chunker.rs  indexer.rs  lib.rs  schema.rs  simple.rs
crates/typstify-ui/: Cargo.toml  package.json
crates/typstify-ui/src/: article.rs  lib.rs  navigation.rs  search.rs
docs/: configuration.md  content-format.md  design.md  index.html  multi_lang_design.md  tasks.md
docs/technical-spec/: index.html
en/: rss.xml
end2end/: package.json
examples/blog/: config.toml  worker.js  wrangler.jsonc
examples/blog/content/: about.md  about.zh.md  index.md  index.zh.md
examples/blog/content/docs/: technical-spec.typ
examples/blog/content/posts/: advanced-features.md  getting-started.md  hello-world.md
examples/blog/content/posts.zh/: hello-world.md
frontend/: Cargo.toml
old-url/advanced/: index.html
posts/: index.html
posts/advanced-features/: index.html
posts/getting-started/: index.html
posts/hello-world/: index.html
public/: rss.xml
server/: Cargo.toml
server/src/: main.rs
style/: input.css  input.css.backup  main.css
tags/: index.html
tags/advanced/: index.html
tags/features/: index.html
tags/guide/: index.html
tags/i18n/: index.html
tags/intro/: index.html
tags/spec/: index.html
tags/technical/: index.html
tags/tutorial/: index.html
tags/typst/: index.html
tags/welcome/: index.html
tags/介绍/: index.html
tags/欢迎/: index.html
typstify-ssg/: Cargo.toml  build.rs
typstify-ssg/assets/: search.css  search.js
typstify-ssg/examples/: basic.rs  check_singlestage.rs  search_test.rs
typstify-ssg/src/: config.rs  content.rs  content_id.rs  feed.rs  html.rs  lib.rs  main.rs  mdbook_template.rs  metadata.rs  pages.rs  renderers.rs  search.rs
zh/: index.html  rss.xml  search-index.json
zh/about/: index.html
zh/archives/: index.html
zh/posts/: index.html
zh/posts/hello-world/: index.html
zh/tags/: index.html
