#############################################
# Typstify Workspace Manifest
# Restored workspace and shared dependencies
#############################################

[workspace]
members = [
    "typstify-ssg",
]
resolver = "2"

[workspace.dependencies]
# CLI
clap = "4.5.53"
config = "0.15"

# Core
eyre = "0.6"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.33"
toml = "0.9.8"

# WebAssembly / JS interop
console_error_panic_hook = "0.1"
console_log = "1.0"
gloo-net = "0.6"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

# Leptos (CSR) and UI
leptos = "0.8.14"
leptos_meta = "0.8"
leptos_router = "0.8"
singlestage = "0.3.10"

# Content processing
pulldown-cmark = "0.13"
typst-syntax = "0.14.0"
regex = "1.11"

# File system and path handling
walkdir = "2.5"

# Date and time
chrono = "0.4"

# Error handling
thiserror = "2.0"

# Atom feed generation
atom_syndication = "0.12"

# Search engine
tantivy = "0.25"

# Dev dependencies
tempfile = "3.0"

# Typst toolchain
typst = "0.14.0"
typst-library = "0.14.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

[[workspace.metadata.leptos]]
# Project identifier
name = "typstify"
# Packages/crates
lib-package = "typstify-ssg"
bin-package = "typstify-ssg"
# Output naming
output-name = "typstify"
# Serve/build directories
site-root = "dist"
site-pkg-dir = "pkg"
assets-dir = "public"
# Dev server configuration
site-addr = "127.0.0.1:5173"
reload-port = 3002
# Features to use for lib and bin (CSR only)
lib-features = ["csr"]
bin-features = ["csr"]
# Extra watched folders
watch-additional-files = ["style/", "contents/"]
