[package]
name = "server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
leptos = { workspace = true, features = ["ssr"] }
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
