[package]
name = "typstify-ssg"
version = "0.1.0"
edition = "2021"
description = "Static Site Generator for Typstify - supports both Markdown and Typst content"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
config = "0.15"

# Leptos framework
leptos = { version = "0.8", features = ["csr"] }

# Content processing
pulldown-cmark = { version = "0.13.0", features = ["html"] }
typst-syntax = "0.13.1"
regex = "1.10"

# File system and path handling
walkdir = "2.5"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
eyre = "0.6.12"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0"
toml = "0.9.5"

# Atom feed generation
atom_syndication = "0.12"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Search engine
tantivy = "0.25"

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
opengraph = []
optimize = []
