[package]
name = "typstify-ssg"
version = "0.1.0"
edition = "2021"
description = "Static Site Generator for Typstify - supports both Markdown and Typst content"

[dependencies]
# CLI
clap = { workspace = true, features = ["derive"] }
config = { workspace = true }

# Leptos framework and UI
leptos = { workspace = true, features = ["csr"] }
singlestage = { workspace = true, features = ["csr"] }

# Content processing
pulldown-cmark = { workspace = true, features = ["html"] }
typst-syntax = { workspace = true }
regex = { workspace = true }

# File system and path handling
walkdir = { workspace = true }

# Date and time
chrono = { workspace = true, features = ["serde"] }

# Error handling
eyre = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Atom feed generation
atom_syndication = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Search engine
tantivy = { workspace = true }

getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
csr = []
opengraph = []
optimize = []
