[package]
name = "typstify-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and configuration for Typstify"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
config.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
