[package]
name = "typstify-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Content parsers for Markdown and Typst"

[dependencies]
typstify-core.workspace = true

pulldown-cmark.workspace = true
syntect.workspace = true
thiserror.workspace = true
