[package]
name = "typstify-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Content parsers for Markdown and Typst"

[dependencies]
typstify-core = "0.1.0"

pulldown-cmark.workspace = true
syntect.workspace = true
thiserror.workspace = true
