[package]
name = "typstify-search-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "WASM search runtime for browser"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen-futures"]

[dependencies]
console_error_panic_hook.workspace = true
gloo-net.workspace = true
js-sys.workspace = true
scc.workspace = true
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
