[package]
name = "typstify-search"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Search index generation with Tantivy"

[dependencies]
typstify-core.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tantivy.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
chrono.workspace = true
tempfile.workspace = true
