[package]
name = "typstify-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Search index generation with Tantivy"

[dependencies]
typstify-core = "0.1.0"

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tantivy.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
chrono.workspace = true
tempfile.workspace = true
