[package]
name = "typstify-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Leptos UI components for Typstify"

[dependencies]
leptos = { workspace = true, features = ["csr"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = [
    "Window",
    "KeyboardEvent",
    "MouseEvent",
] }
